<resources>
    <string name="app_name">Notes</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_home">Home</string>
    <string name="home_recent">Recents</string>

    <string name="nav_search">Search</string>
    <string name="sort_date">Sort by date</string>
    <string name="sort_most_recent">Sort by most recent</string>
    <string name="sort_a_to_z">Sort by a-z</string>
    <string name="sort_by_create">Sort by Last Created</string>
    <string name="sort_by_update">Sort by Last Updated</string>

    <string name="note_group">Group</string>
    <string name="edit_note_name">Note name</string>
    <string name="add_text">Text</string>
    <string name="add_voice">voice</string>
    <string name="add_picture">Picture</string>
    <string name="add_quiz">Quiz</string>

    <string name="text_text_box">Text Box</string>
    <string name="text_list">Text List</string>
    <string name="text_table">Table</string>

    <string name="text_add_text">+ Add Text</string>
    <string name="text_add_list">+ Add List</string>
    <string name="text_add_Table">Notes</string>

    <string name="create_picture">Creating Picture Card</string>
    <string name="add_title">+ Add Title</string>
    <string name="add_description">+ Add Description</string>
    <string name="Create_voice_note">Creating Audio Note</string>

    <string name="quiz">Quiz</string>
    <string name="quiz_question">Question</string>
    <string name="select">Select type</string>
    <string-array name="ansChoice">
        <item>Checkbox</item>
        <item>Radio</item>
        <item>Written</item>
    </string-array>
    <string name="quiz_checkbox">Checkbox</string>
    <string name="quiz_radio">Radio</string>
    <string name="quiz_written">Written</string>
    <string name="quiz_answer">Add Answer</string>
    <string name="quiz_new_question">New Question</string>

    <string name="view_picture">Viewing Picture Card</string>
    <string name="view_voice">Viewing Voice Notes</string>

    <string name="quiz_submit">Submit</string>
    <string name="quiz_history">Show History</string>
    <string name="Score_history">Score History</string>
    <string name="delete_history">Delete History</string>
    <string name="task_name">New Task</string>
    <string name="task_description">Description</string>
    <string name="task_date">Date</string>
    <string name="task_time">Time</string>
    <string name="task_remind">Remind Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_quiz_set">QuizSet</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="gecko">Gecko</string>
    <string name="labs">Labs</string>
    <string name="notes">Notes</string>
    <string name="viewall">View All</string>
    <string name="add">Add</string>
    <string name="course_name">Course Name :</string>
    <string name="btn">Submit :</string>
    <string name="h_back">Back</string>
    <string name="text_box">TextBox</string>
    <string name="list">List</string>
    <string name="table">Table</string>
    <string name="view">Note Name</string>

    <string name="txtview1">Add Text</string>
    <string name="txt_back">Back</string>
    <string name="txt_save">Save</string>

    <string name="done">Done</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addAns">addAns</string>
    <string name="ansCorrect">Set Answer</string>
    <string name="addq">Add Question</string>
    <string name="submitAns">Submit Answer</string>
    <string name="viewAns">View Answer</string>

    <string name="txtview2">Add List</string>
    <string name="list_save">Save</string>
    <string name="list_del">Delete</string>
    <string name="list_update">Update</string>
    <string name="list_back">Back</string>
    <string name="list_view">view</string>

    <string name="txtview3">Add Table</string>
    <string name="table_back">Back</string>

    <string name="editsavebtn">Save</string>
    <string name="editdelbtn">Delete</string>
</resources>