<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".CreateAudioNote">

    <EditText
        android:id="@+id/txtAddAudioTitle"
        android:layout_width="285dp"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="@string/add_title"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/txtAddAudioDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateAudio"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/txtAddAudioDescription"
        android:layout_width="285dp"
        android:layout_height="114dp"
        android:ems="10"
        android:hint="@string/add_description"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAudioTitle" />

    <TextView
        android:id="@+id/txtCreateAudio"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:text="@string/Create_voice_note"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/btnAudioNoteDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAudioDescription"
        app:layout_constraintVertical_bias="0.161" />

</androidx.constraintlayout.widget.ConstraintLayout>