<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PictureNoteActivity">

    <EditText
        android:id="@+id/txtAddAudioTitle"
        android:layout_width="236dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/add_title"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/txtCreateAudio"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:text="@string/create_picture"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/txtAddAudioDescription"
        android:layout_width="236dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/add_description"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

    <Button
        android:id="@+id/btnAudioNoteDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <ImageView
        android:id="@+id/picView"
        android:layout_width="279dp"
        android:layout_height="172dp"
        android:background="@drawable/dotted_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAudioTitle"
        app:layout_constraintBottom_toTopOf="@id/btnContainer"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnContainer"
        android:layout_width="192dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAddAudioDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picView">

        <ImageButton
            android:id="@+id/btnTakePic"
            android:layout_width="55dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="@id/btnContainer"
            app:layout_constraintEnd_toStartOf="@+id/btnCamaraPic"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnContainer"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <ImageButton
            android:id="@+id/btnCamaraPic"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnContainer"
            app:layout_constraintBottom_toBottomOf="@id/btnContainer"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:layout_editor_absoluteY="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>